att pagina produtos

--- a/botamoto1.html
+++ b/botamoto1.html
@@ -44,7 +44,7 @@
 
       <label><b>Bota Fox Instinct Amarelo Fluor</b> <br> R$ 2.699,90<label> <br>
         <select name="" id="tamanho">
-          <option value="">Selecione um tamanho</option>
+          <option value="Tamanho">Selecione um tamanho</option>
           <option value="36">36</option>
           <option value="37">37</option>
           <option value="38">38</option>
@@ -64,7 +64,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Bota Fox Instinct Amarelo Fluor', document.getElementById('qtd1').value, '2699.90',  document.getElementById('botamoto1').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Bota Fox Instinct Amarelo Fluor', document.getElementById('qtd1').value, '2699.90',  document.getElementById('botamoto1').src, document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
