--- a/capacetekart2.html
+++ b/capacetekart2.html
@@ -44,7 +44,7 @@
 
     <label><b>Capacete Norisk FF3391 Preto c/ Rosa</b> <br> R$ 499,90<label> <br>
       <select name="" id="tamanho">
-        <option value="">Selecione um Tamanho</option>
+        <option value="Tamanho">Selecione um Tamanho</option>
         <option value="XS">XS (53-54cm)</option>
         <option value="S">S (55-56cm)</option>
         <option value="M">M (57-58cm)</option>
@@ -61,7 +61,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Capacete Norisk FF3391 Preto c/ Rosa', document.getElementById('qtd1').value, '499.90',  document.getElementById('capacetekart2').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Capacete Norisk FF3391 Preto c/ Rosa', document.getElementById('qtd1').value, '499.90',  document.getElementById('capacetekart2').src, document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
