--- a/luvakart3.html
+++ b/luvakart3.html
@@ -44,7 +44,7 @@
 
       <label><b>Luva 38s Branco c/ Preto</b> <br> R$ 299,90<label> <br>
         <select name="" id="tamanho">
-          <option value="">Selecione um Tamanho</option>
+          <option value="Tamanho">Selecione um Tamanho</option>
           <option value="P">P</option>
           <option value="M">M</option>
           <option value="G">G</option>
@@ -58,7 +58,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button" onclick="AddCarrinho('Luva 38s Branco c/ Preto', document.getElementById('qtd1').value, '299,90',  document.getElementById('luvakart3').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button" onclick="AddCarrinho('Luva 38s Branco c/ Preto', document.getElementById('qtd1').value, '299,90',  document.getElementById('luvakart3').src, document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
