--- a/outlet.html
+++ b/outlet.html
@@ -21,7 +21,7 @@
         <li><a class="cadlog" href="./corrida.html">Corrida</a></li>
         <li><a class="cadlog" href="./moto.html">Moto</a></li>
         <li><a class="cadlog" href="./kart.html">Kart</a></li>
-        <li style="float:right"><a class="activec" href="#carrinho"><img src="./img/carrinho.png" alt=""></a></li>
+        <li style="float:right"><a class="activec" href="./carrinho.html"><img src="./img/carrinho.png" alt=""></a></li>
         <li style="float:right"><a href="./login.html" class="cadlog">Login</a></li>
         <li style="float:right"><a href="./cadastro.html" class="cadlog">Cadastro</a></li>
         
@@ -44,10 +44,10 @@
                 <div class="card__header">                
                   <div class="card__header-text">
                     <h3 class="card__title">Balaclava DryUV Paddoci Azul</h3>       
-                    <span class="card__status">R$44,90</span>
+                    <span class="card__status">R$ 44,90</span>
                   </div>
                 </div>
-                <p class="card__description">Balaclava n°1</p>
+                <p class="card__description">Até 3x no cartão sem juros!</p>
               </div>
             </a>      
           </li>
@@ -58,10 +58,10 @@
                 <div class="card__header">             
                   <div class="card__header-text">
                     <h3 class="card__title">Balaclava Aberta Eparco Vermelha </h3>
-                    <span class="card__status">R$59,90</span>
+                    <span class="card__status">R$ 59,90</span>
                   </div>
                 </div>
-                <p class="card__description">Balaclava n°2.</p>
+                <p class="card__description">Até 4x no cartão sem juros!</p>
               </div>
             </a>
           </li>
@@ -72,10 +72,10 @@
                 <div class="card__header">                 
                   <div class="card__header-text">
                     <h3 class="card__title">Balaclava Ski Cap</h3>        
-                    <span class="card__status">R$79,99</span>
+                    <span class="card__status">R$ 79,99</span>
                   </div>
                 </div>
-                <p class="card__description">Balaclava n°3.</p>
+                <p class="card__description">Em até 5x de R$ 16,00 sem juros no cartão!</p>
               </div>
             </a>
           </li>  
@@ -90,10 +90,10 @@
                 <div class="card__header">                
                   <div class="card__header-text">
                     <h3 class="card__title"> Conjunto Capa de Chuva Pole Racing</h3>       
-                    <span class="card__status">R$349,90</span>
+                    <span class="card__status">R$ 349,90</span>
                   </div>
                 </div>
-                <p class="card__description">Conjunto Feminino.</p>
+                <p class="card__description">Em até 6x no cartão sem juros!</p>
               </div>
             </a>      
           </li>
@@ -104,10 +104,10 @@
                 <div class="card__header">             
                   <div class="card__header-text">
                     <h3 class="card__title">Conjunto Capa de Chuva Nave </h3>
-                    <span class="card__status">R$199,99</span>
+                    <span class="card__status">R$ 199,99</span>
                   </div>
                 </div>
-                <p class="card__description">Conjunto Masculino.</p>
+                <p class="card__description">Parcelas a partir de R$40,00 no cartão!</p>
               </div>
             </a>
           </li>
@@ -118,10 +118,10 @@
                 <div class="card__header">                 
                   <div class="card__header-text">
                     <h3 class="card__title">Jaqueta X11 Travel 2</h3>        
-                    <span class="card__status">R$999,90</span>
+                    <span class="card__status">R$ 999,90</span>
                   </div>
                 </div>
-                <p class="card__description">Jaqueta Outlet.</p>
+                <p class="card__description">Em até 10x de R$100,00 no cartão sem juros!</p>
               </div>
             </a>
           </li>  
@@ -136,10 +136,10 @@
                 <div class="card__header">                
                   <div class="card__header-text">
                     <h3 class="card__title">Calça LS2 Chart Lady Black Red</h3>       
-                    <span class="card__status">R$749,90</span>
+                    <span class="card__status">R$ 749,90</span>
                   </div>
                 </div>
-                <p class="card__description">Calça n°1.</p>
+                <p class="card__description">Parcelas a partir de R$ 62,50 no cartão!</p>
               </div>
             </a>      
           </li>
@@ -150,10 +150,10 @@
                 <div class="card__header">             
                   <div class="card__header-text">
                     <h3 class="card__title">Calça Feminina Downhill Factory Rosa</h3>
-                    <span class="card__status">R$229,99</span>
+                    <span class="card__status">R$ 229,99</span>
                   </div>
                 </div>
-                <p class="card__description">Calça n°2.</p>
+                <p class="card__description">Em até 6x no cartão sem juros!</p>
               </div>
             </a>
           </li>
@@ -164,10 +164,10 @@
                 <div class="card__header">                 
                   <div class="card__header-text">
                     <h3 class="card__title">Macacão Texx Diana 2</h3>        
-                    <span class="card__status">R$1.399,90</span>
+                    <span class="card__status">R$ 1.399,90</span>
                   </div>
                 </div>
-                <p class="card__description">Macacão Outlet n°1.</p>
+                <p class="card__description">Em até 12x de R$ 116,00 no cartão sem juros!</p>
               </div>
             </a>
           </li>  
@@ -182,10 +182,10 @@
                 <div class="card__header">                
                   <div class="card__header-text">
                     <h3 class="card__title"> Bota Militar Franboots</h3>       
-                    <span class="card__status">R$169,99</span>
+                    <span class="card__status">R$ 169,99</span>
                   </div>
                 </div>
-                <p class="card__description">Bota Outlet n°1.</p>
+                <p class="card__description">Até 3x no cartão!</p>
               </div>
             </a>      
           </li>
@@ -196,10 +196,10 @@
                 <div class="card__header">             
                   <div class="card__header-text">
                     <h3 class="card__title">Bota Acero Speed</h3>
-                    <span class="card__status">R$249,90</span>
+                    <span class="card__status">R$ 249,90</span>
                   </div>
                 </div>
-                <p class="card__description">Bota Outlet n°2.</p>
+                <p class="card__description">Em até 5x de R$ 50,00 no cartão sem juros!</p>
               </div>
             </a>
           </li>
@@ -210,10 +210,10 @@
                 <div class="card__header">                 
                   <div class="card__header-text">
                     <h3 class="card__title">Bota Pantaneiro</h3>        
-                    <span class="card__status">R$109,99</span>
+                    <span class="card__status">R$ 109,99</span>
                   </div>
                 </div>
-                <p class="card__description">Bota Outlet n°3.</p>
+                <p class="card__description">Parcelas a partir de R$ 50,00 no cartão!</p>
               </div>
             </a>
           </li>  
