--- a/botamoto3.html
+++ b/botamoto3.html
@@ -44,7 +44,7 @@
 
       <label><b>Bota Red Dragon Action</b> <br> R$ 499,90<label> <br>
         <select name="" id="tamanho">
-          <option value="">Selecione um tamanho</option>
+          <option value="Tamanho">Selecione um tamanho</option>
           <option value="36">36</option>
           <option value="37">37</option>
           <option value="38">38</option>
@@ -64,7 +64,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button" id="adicionar1" id="produto1" onclick="AddCarrinho('Bota Red Dragon Action', document.getElementById('qtd1').value, '499.90',  document.getElementById('botamoto3').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button" id="adicionar1" id="produto1" onclick="AddCarrinho('Bota Red Dragon Action', document.getElementById('qtd1').value, '499.90',  document.getElementById('botamoto3').src, document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
