--- a/capacetemoto3.html
+++ b/capacetemoto3.html
@@ -44,7 +44,7 @@
 
     <label><b>Capacete Fox V1 Mvrs Prix Fluo Orange</b> <br> R$ 1.099,00<label> <br>
       <select name="" id="tamanho">
-        <option value="">Selecione um Tamanho</option>
+        <option value="Tamanho">Selecione um Tamanho</option>
         <option value="XS">XS (53-54cm)</option>
         <option value="S">S (55-56cm)</option>
         <option value="M">M (57-58cm)</option>
@@ -61,7 +61,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Capacete Fox V1 Mvrs Prix Fluo Orange', document.getElementById('qtd1').value, '1099.00',  document.getElementById('capacetemoto3').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Capacete Fox V1 Mvrs Prix Fluo Orange', document.getElementById('qtd1').value, '1099.00',  document.getElementById('capacetemoto3').src, document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
