--- a/macacaomoto2.html
+++ b/macacaomoto2.html
@@ -44,7 +44,7 @@
 
       <label><b>Macacão Fem. Asw Image Fade</b> <br> R$ R$ 349,49<label> <br>
         <select name="" id="tamanho">
-          <option value="">Selecione um Tamanho</option>
+          <option value="Tamanho">Selecione um Tamanho</option>
           <option value="42">42</option>
           <option value="44">44</option>
           <option value="46">46</option>
@@ -65,7 +65,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Macacão Fem. Asw Image Fade', document.getElementById('qtd1').value, '349.49',  document.getElementById('macacaomoto2').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Macacão Fem. Asw Image Fade', document.getElementById('qtd1').value, '349.49',  document.getElementById('macacaomoto2').src, document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
