--- a/admin.html
+++ b/admin.html
@@ -69,6 +69,7 @@
         <label>Nome do Produto:</label>
         <input type="text" class="input-field" id="excluir">
     </div>
+    <input type="button" value="Excluir" id="excluir" onclick="">
     <button onclick="Excluir()">Excluir Produto</button>
     </div>
     <script src="./JSC/admin.js"></script>
