pagina produtos pronta, att footer e mudanças no carrinho

--- a/sapatilharacing1.html
+++ b/sapatilharacing1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sapatilha Sparco Slalom RB-3.1 Azul</title>
+  <title>Sapatilha Sparco Slalom RB-3.1</title>
   <link rel="stylesheet" href="./produto.css">
 </head>
 <body>
@@ -42,7 +42,7 @@
         
         
         <div class="product">
-            <h3 class="h3-prod">Sapatilha Sparco Slalom RB-3.1 Azul</h3>
+            <h3 class="h3-prod">Sapatilha Sparco Slalom RB-3.1</h3>
             <h3 class="h3-valor">R$ 749,90</h3>
 
             <select name="" id="tamanho">
@@ -71,22 +71,22 @@
       <div class="description">
         <h3 class="title-desc">Características:</h3>
 
-        <label class="elements"> – Bota fabricada em couro bovino resistente;</label><br><br>
-        <label class="elements"> – Sola de borracha desenvolvida para zona urbana ou terrenos desafiadores;</label><br><br>
-        <label class="elements"> –  Resistente a água, como pequenas poças ou chuvas finas e rápidas;</label><br><br>
-        <label class="elements"> – Palmilha em gel de 1cm e espumas internas;</label><br><br>
-        <label class="elements"> – Zíper lateral reforçado para auxiliar ao calçar e protegido com couro e velcro;</label>
+        <label class="elements"> – Sapatilha antichama;</label><br><br>
+        <label class="elements"> – Parte superior em camurça;</label><br><br>
+        <label class="elements"> – Sola interior em couro;</label><br><br>
+        <label class="elements"> – Sola antiderrapante, antiestática, resistente ao óleo e aos hidrocarbonos;</label><br><br>
+        <label class="elements"> – Ajuste perfeito e extremamente confortável;</label>
         <br><br><br>
         <h3 class="title-desc">Especificações:</h3>
 
-        <label class="element-master">Nome:</label><label class="elements">Bota Militar</label>
-        <label class="element-master-1">Gênero:</label><label class="elements">Masculino</label>
-        <label class="element-master-1">Categoria:</label><label class="elements">Botas</label>
+        <label class="element-master">Nome:</label><label class="elements">Slalom RB-3.1</label>
+        <label class="element-master-1">Gênero:</label><label class="elements">Unissex</label>
+        <label class="element-master-1">Categoria:</label><label class="elements">Sapatilhas</label>
         <br><br><br><br>
 
-        <label class="element-master">Material:</label><label class="elements">Couro</label>
-        <label class="element-master-1">Marca:</label><label class="elements">Franboots</label>
-        <label class="element-master-1">Origem:</label><label class="elements">Nacional</label>
+        <label class="element-master">Material:</label><label class="elements">Camurça</label>
+        <label class="element-master-1">Marca:</label><label class="elements">Sparco</label>
+        <label class="element-master-1">Origem:</label><label class="elements">Internacional</label>
 <br><br><br><br><br><br>
 
         <label class="sup">Ficou com alguma dúvida sobre o produto?</label><a class="sup-link" href="./suporte.html">Clique aqui.</a>
