--- a/sapatilharacing3.html
+++ b/sapatilharacing3.html
@@ -71,22 +71,22 @@
       <div class="description">
         <h3 class="title-desc">Características:</h3>
 
-        <label class="elements"> – Bota fabricada em couro bovino resistente;</label><br><br>
-        <label class="elements"> – Sola de borracha desenvolvida para zona urbana ou terrenos desafiadores;</label><br><br>
-        <label class="elements"> –  Resistente a água, como pequenas poças ou chuvas finas e rápidas;</label><br><br>
-        <label class="elements"> – Palmilha em gel de 1cm e espumas internas;</label><br><br>
-        <label class="elements"> – Zíper lateral reforçado para auxiliar ao calçar e protegido com couro e velcro;</label>
+        <label class="elements"> – Cabedal totalmente em tecido;</label><br><br>
+        <label class="elements"> – Tecido elástico único à prova de fogo;</label><br><br>
+        <label class="elements"> – Cabos de Kevlar entrelaçados na parte superior;</label><br><br>
+        <label class="elements"> – Sola em Fibra de Carbono;</label><br><br>
+        <label class="elements"> – Sola ultrafina resistente a óleo e antiestática;</label>
         <br><br><br>
         <h3 class="title-desc">Especificações:</h3>
 
-        <label class="element-master">Nome:</label><label class="elements">Bota Militar</label>
-        <label class="element-master-1">Gênero:</label><label class="elements">Masculino</label>
-        <label class="element-master-1">Categoria:</label><label class="elements">Botas</label>
+        <label class="element-master">Nome:</label><label class="elements">X-Light</label>
+        <label class="element-master-1">Gênero:</label><label class="elements">Unissex</label>
+        <label class="element-master-1">Categoria:</label><label class="elements">Sapatilhas</label>
         <br><br><br><br>
 
-        <label class="element-master">Material:</label><label class="elements">Couro</label>
-        <label class="element-master-1">Marca:</label><label class="elements">Franboots</label>
-        <label class="element-master-1">Origem:</label><label class="elements">Nacional</label>
+        <label class="element-master">Material:</label><label class="elements">Tecido</label>
+        <label class="element-master-1">Marca:</label><label class="elements">Sparco</label>
+        <label class="element-master-1">Origem:</label><label class="elements">Internacional</label>
 <br><br><br><br><br><br>
 
         <label class="sup">Ficou com alguma dúvida sobre o produto?</label><a class="sup-link" href="./suporte.html">Clique aqui.</a>
