--- a/corrida.html
+++ b/corrida.html
@@ -181,7 +181,7 @@
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title">Sapatilha Sparco Slalom RB-3.1 Azul</h3>       
+                    <h3 class="card__title">Sapatilha Sparco Slalom RB-3.1</h3>       
                     <span class="card__status">R$ 749,90</span>
                   </div>
                 </div>
@@ -195,7 +195,7 @@
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Sapatilha OMP Racing First</h3>
+                    <h3 class="card__title">Sapatilha OMP Racing First-S</h3>
                     <span class="card__status">R$ 1.599,90</span>
                   </div>
                 </div>
@@ -223,13 +223,19 @@
           <ul class="links">
             <li>
               <a class="cadlog" href="./sobrenos.html">Quem somos nós </a>
-              <a class="cadlog" href="./suporte.html">Como podemos ajudar? </a>
-              <a class="cadlog" href="./suporte.html">Nossas redes sociais! </a>
+              <a class="cadlog-2" href="./suporte.html">Como podemos ajudar? </a>
+              <hr>
+              <a class="cadlog" href="./suporte.html"><img src="./img/twitter.svg" alt="" class="redes-master"> </a>
+              <a class="cadlog" href="./suporte.html"><img src="./img/facebook (1).svg" alt="" class="redes"> </a>
+              <a class="cadlog" href="./suporte.html"><img src="./img/instagram.svg" alt="" class="redes"> </a>
+              <a class="cadlog" href="./suporte.html"><img src="./img/mail.svg" alt="" class="redes"> </a>
+              <a class="cadlog" href="./suporte.html"><img src="./img/linkedin.svg" alt="" class="redes"> </a>
+              <hr>
+              <img src="./img/pagamentos.png" class="pag">
             </li>
- 
+        
           </ul>
-      </footer>
- 
+        </footer>
 </body>
  
 </html>
