--- a/index.html
+++ b/index.html
@@ -179,12 +179,13 @@
         <li>
           <a class="cadlog" href="./sobrenos.html">Quem somos nós </a>
           <a class="cadlog-2" href="./suporte.html">Como podemos ajudar? </a>
-          <a class="cadlog" href="./suporte.html"><img src="./img/twitter.svg" alt="" class="redes-master"> </a>
-          <a class="cadlog" href="./suporte.html"><img src="./img/facebook (1).svg" alt="" class="redes"> </a>
-          <a class="cadlog" href="./suporte.html"><img src="./img/instagram.svg" alt="" class="redes"> </a>
-          <a class="cadlog" href="./suporte.html"><img src="./img/mail.svg" alt="" class="redes"> </a>
-          <a class="cadlog" href="./suporte.html"><img src="./img/linkedin.svg" alt="" class="redes"> </a>
-          
+          <hr>
+          <a class="cadlog" href="./suporte.html"><img src="./img/twitter.svg"  class="redes-master"> </a>
+          <a class="cadlog" href="./suporte.html"><img src="./img/facebook (1).svg"  class="redes"> </a>
+          <a class="cadlog" href="./suporte.html"><img src="./img/instagram.svg" class="redes"> </a>
+          <a class="cadlog" href="./suporte.html"><img src="./img/mail.svg" class="redes"> </a>
+          <a class="cadlog" href="./suporte.html"><img src="./img/linkedin.svg" class="redes"> </a>
+          <hr>
           <img src="./img/pagamentos.png" class="pag">
         </li>
     
