--- a/kart.html
+++ b/kart.html
@@ -57,7 +57,7 @@
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Capacete Norisk FF391 Preto c/ Rosa</h3>
+                    <h3 class="card__title">Capacete Norisk FF391</h3>
                     <span class="card__status">R$ 499,00</span>
                   </div>
                 </div>
@@ -71,7 +71,7 @@
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Capacete Integral K3 SV Multi MPLK</h3>        
+                    <h3 class="card__title">Capacete AGV Integral K3 SV Multi MPLK</h3>        
                     <span class="card__status">R$ 1.349,00</span>
                   </div>
                 </div>
@@ -223,12 +223,19 @@
           <ul class="links">
             <li>
               <a class="cadlog" href="./sobrenos.html">Quem somos nós </a>
-              <a class="cadlog" href="./suporte.html">Como podemos ajudar? </a>
-              <a class="cadlog" href="./suporte.html">Nossas redes sociais! </a>
+              <a class="cadlog-2" href="./suporte.html">Como podemos ajudar? </a>
+              <hr>
+              <a class="cadlog" href="./suporte.html"><img src="./img/twitter.svg" alt="" class="redes-master"> </a>
+              <a class="cadlog" href="./suporte.html"><img src="./img/facebook (1).svg" alt="" class="redes"> </a>
+              <a class="cadlog" href="./suporte.html"><img src="./img/instagram.svg" alt="" class="redes"> </a>
+              <a class="cadlog" href="./suporte.html"><img src="./img/mail.svg" alt="" class="redes"> </a>
+              <a class="cadlog" href="./suporte.html"><img src="./img/linkedin.svg" alt="" class="redes"> </a>
+              <hr>
+              <img src="./img/pagamentos.png" class="pag">
             </li>
- 
+        
           </ul>
-      </footer>
+        </footer>
  
 </body>
  
