--- a/outlet.html
+++ b/outlet.html
@@ -223,12 +223,19 @@
           <ul class="links">
             <li>
               <a class="cadlog" href="./sobrenos.html">Quem somos nós </a>
-              <a class="cadlog" href="./suporte.html">Como podemos ajudar? </a>
-              <a class="cadlog" href="./suporte.html">Nossas redes sociais! </a>
+              <a class="cadlog-2" href="./suporte.html">Como podemos ajudar? </a>
+              <hr>
+              <a class="cadlog" href="./suporte.html"><img src="./img/twitter.svg" alt="" class="redes-master"> </a>
+              <a class="cadlog" href="./suporte.html"><img src="./img/facebook (1).svg" alt="" class="redes"> </a>
+              <a class="cadlog" href="./suporte.html"><img src="./img/instagram.svg" alt="" class="redes"> </a>
+              <a class="cadlog" href="./suporte.html"><img src="./img/mail.svg" alt="" class="redes"> </a>
+              <a class="cadlog" href="./suporte.html"><img src="./img/linkedin.svg" alt="" class="redes"> </a>
+              <hr>
+              <img src="./img/pagamentos.png" class="pag">
             </li>
- 
+        
           </ul>
-      </footer>
+        </footer>
  
 </body>
  
