--- a/sapatilharacing2.html
+++ b/sapatilharacing2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sapatilha OMP Racing First</title>
+  <title>Sapatilha OMP Racing First-S</title>
   <link rel="stylesheet" href="./produto.css">
 </head>
 <body>
@@ -42,7 +42,7 @@
         
         
         <div class="product">
-            <h3 class="h3-prod"> Sapatilha OMP Racing First</h3>
+            <h3 class="h3-prod"> Sapatilha OMP Racing First-S</h3>
             <h3 class="h3-valor">R$ 1.599,90</h3>
 
             <select name="" id="tamanho">
@@ -71,22 +71,22 @@
       <div class="description">
         <h3 class="title-desc">Características:</h3>
 
-        <label class="elements"> – Bota fabricada em couro bovino resistente;</label><br><br>
-        <label class="elements"> – Sola de borracha desenvolvida para zona urbana ou terrenos desafiadores;</label><br><br>
-        <label class="elements"> –  Resistente a água, como pequenas poças ou chuvas finas e rápidas;</label><br><br>
-        <label class="elements"> – Palmilha em gel de 1cm e espumas internas;</label><br><br>
-        <label class="elements"> – Zíper lateral reforçado para auxiliar ao calçar e protegido com couro e velcro;</label>
+        <label class="elements"> – Parte externa em camurça;</label><br><br>
+        <label class="elements"> – Parte interna em NOMEX;</label><br><br>
+        <label class="elements"> –  Cano alto;</label><br><br>
+        <label class="elements"> – Velcro na parte superior;</label><br><br>
+        <label class="elements"> – Sola de borracha com design projetado para facilitar a rotação dos pés;</label>
         <br><br><br>
         <h3 class="title-desc">Especificações:</h3>
 
-        <label class="element-master">Nome:</label><label class="elements">Bota Militar</label>
+        <label class="element-master">Nome:</label><label class="elements">First-S</label>
         <label class="element-master-1">Gênero:</label><label class="elements">Masculino</label>
-        <label class="element-master-1">Categoria:</label><label class="elements">Botas</label>
+        <label class="element-master-1">Categoria:</label><label class="elements">Sapatilhas</label>
         <br><br><br><br>
 
-        <label class="element-master">Material:</label><label class="elements">Couro</label>
-        <label class="element-master-1">Marca:</label><label class="elements">Franboots</label>
-        <label class="element-master-1">Origem:</label><label class="elements">Nacional</label>
+        <label class="element-master">Material:</label><label class="elements">Camurça</label>
+        <label class="element-master-1">Marca:</label><label class="elements">OMP</label>
+        <label class="element-master-1">Origem:</label><label class="elements">Internacional</label>
 <br><br><br><br><br><br>
 
         <label class="sup">Ficou com alguma dúvida sobre o produto?</label><a class="sup-link" href="./suporte.html">Clique aqui.</a>
