--- a/cadastro.html
+++ b/cadastro.html
@@ -9,7 +9,8 @@
     
 </head>
 <header>
-    <a href="./index.html"><img src="./img/logo3.png"></a>
+   
+    <a href="index.html"><img src="./img/logo3.png" class="media-object  img-responsive img-thumbnail"></a>
 </header>
 <body>
     <div class="container">
