--- a/carrinho.html
+++ b/carrinho.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/carrinho.css">
 </head>
 <header>
-    <img src="./img/logo3.png" alt="" href="./index.html">
+  <a href="index.html"><img src="./img/logo3.png" class="media-object  img-responsive img-thumbnail"></a>
   </header>
 
     <body>
@@ -53,7 +53,7 @@
           <a class="cadlog" href="./sobrenos.html">Quem somos nós </a>
           <a class="cadlog" href="./suporte.html">Como podemos ajudar? </a>
           <hr class="hr-footer">
-        <a class="cadlog" href="./suporte.html"><img src="./img/twitter.svg" alt="" class="redes-master"> </a>
+        <a class="cadlog" href="https://twitter.com/Matheusxsxsx"><img src="./img/twitter.svg" alt="" class="redes-master"> </a>
         <a class="cadlog" href="./suporte.html"><img src="./img/facebook (1).svg" alt="" class="redes"> </a>
         <a class="cadlog" href="./suporte.html"><img src="./img/instagram.svg" alt="" class="redes"> </a>
         <a class="cadlog" href="./suporte.html"><img src="./img/mail.svg" alt="" class="redes"> </a>
