--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
           <a class="cadlog" href="./sobrenos.html">Quem somos nós </a>
           <a class="cadlog-2" href="./suporte.html">Como podemos ajudar? </a>
           <hr>
-          <a class="cadlog" href="./suporte.html"><img src="./img/twitter.svg"  class="redes-master"> </a>
-          <a class="cadlog" href="./suporte.html"><img src="./img/facebook (1).svg"  class="redes"> </a>
-          <a class="cadlog" href="./suporte.html"><img src="./img/instagram.svg" class="redes"> </a>
-          <a class="cadlog" href="./suporte.html"><img src="./img/mail.svg" class="redes"> </a>
-          <a class="cadlog" href="./suporte.html"><img src="./img/linkedin.svg" class="redes"> </a>
+          <a class="cadlog" href="https://twitter.com/Matheusxsxsx"><img src="./img/twitter.svg"  class="redes-master"> </a>
+          <a class="cadlog" href="https://www.facebook.com/senaisc"><img src="./img/facebook (1).svg"  class="redes"> </a>
+          <a class="cadlog" href="https://www.instagram.com/"><img src="./img/instagram.svg" class="redes"> </a>
+          <a class="cadlog" href="https://mail.google.com/mail/u/0/?tab=wm#inbox"><img src="./img/mail.svg" class="redes"> </a>
+          <a class="cadlog" href="https://mail.google.com/mail/u/0/?tab=wm#inbox"><img src="./img/linkedin.svg" class="redes"> </a>
           <hr>
           <img src="./img/pagamentos.png" class="pag">
         </li>
