--- a/login.html
+++ b/login.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./cssC/logcad.css">
 </head>
 <header>
-    <img src="./img/logo3.png" alt="">
+  
+    <a href="index.html"><img src="./img/logo3.png" class="media-object  img-responsive img-thumbnail"></a>
 </header>
 <body>
     <div class="container">
