--- a/usuario.html
+++ b/usuario.html
@@ -10,7 +10,8 @@
   
 </head>
 <header>
-    <img src="./img/logo3.png" alt="">
+  <a href="index.html"><img src="./img/logo3.png" class="media-object  img-responsive img-thumbnail"></a>
+    
 </header>
 <body>
     <div class="container">
